feat: add user route WIP

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "nestRes": "nest g res"
+    "nestRes": "nest g res",
+    "nestG": "nest g"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
